Функционал добавления задачи

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,4 +7,5 @@
 @import './blocks/aside.scss';
 @import './blocks/kanban.scss';
 @import './blocks/task.scss';
+@import './blocks/add-task-modal.scss';
 
