--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,11 @@ button {
   color: #3d3d3d;
   margin-bottom: 12px;
 }
+.auth__title--sm {
+  font-size: 32px;
+  margin-bottom: 40px;
+  text-align: center;
+}
 
 .auth__input {
   width: 100%;
@@ -708,6 +713,7 @@ button {
   -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
           box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .task-header {
@@ -791,4 +797,57 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.add-task-modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(37, 23, 68, 0.44);
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.add-task-modal.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.add-task-modal__close {
+  position: absolute;
+  right: 0px;
+  top: 30px;
+  z-index: 100;
+  cursor: pointer;
+}
+.add-task-modal__container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #ffffff;
+  color: #3d3d3d;
+  border-radius: 30px;
+  width: 640px;
+  padding: 40px 40px;
+}
+.add-task-modal__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
 }
