--- a/scss/blocks/_auth-modal.scss
+++ b/scss/blocks/_auth-modal.scss
@@ -42,6 +42,12 @@
   font-weight: 400;
   color: $gray;
   margin-bottom: 12px;
+
+  &--sm {
+    font-size: 32px;
+    margin-bottom: 40px;
+    text-align: center;
+  }
 }
 .auth__input {
   width: 100%;
