--- a/scss/blocks/_kanban.scss
+++ b/scss/blocks/_kanban.scss
@@ -123,6 +123,7 @@
   box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px,
     rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .task-header {
