--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -35,6 +35,18 @@
     font-weight: 400;
   }
 
+  &__user-avatar {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  &__user-logout {
+    color: $white;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
   &__button {
     &--new-task {
       padding: 11px 35px;
