--- a/scss/blocks/_subheader.scss
+++ b/scss/blocks/_subheader.scss
@@ -31,6 +31,22 @@
       display: flex;
       align-items: center;
       gap: 14px;
+      cursor: pointer;
+
+      &--reset {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        .reset {
+          margin-top: 5px;
+          margin-left: 20px;
+          svg {
+            fill: $white;
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
     }
   }
 
