--- a/css/style.css
+++ b/css/style.css
@@ -1107,7 +1107,7 @@ button {
 }
 .task-modal__title {
   text-align: left;
-  padding-top: 14px;
+  padding-top: 35px;
   margin-bottom: 21px;
 }
 .task-modal__description-title {
@@ -1177,4 +1177,41 @@ button {
   color: #ffffff;
   font-size: 24px;
   cursor: pointer;
+}
+.task-modal__comments-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.task-modal__comments-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+.task-modal__comments-username {
+  color: #3d3d3d;
+  font-size: 15px;
+  font-weight: 700;
+  margin-right: 10px;
+}
+.task-modal__comments-date {
+  font-size: 12px;
+  font-style: normal !important;
+}
+.task-modal__comments-text {
+  width: 100%;
+  background-color: #D9D9D9;
+  margin-bottom: 10px;
+  font-size: 15px;
+  color: #3d3d3d;
+  padding: 10px 12px;
+  border-radius: 10px;
 }
